--- a/src/index.css
+++ b/src/index.css
@@ -1,86 +1,3 @@
-:root {
-  --screens-background-color: #ffffff1a;
-  --sidebar-background-color: #121212;
-  --header-background-color: #161616;
-  --text-color: #ffffff;
-  --create-board-btn-color: #bedbb0;
-  --scroll-background-color: #1f1f1f;
-  --scroll-btn-color: #121212;
-  --need-help-background-color: #1f1f1f;
-}
-
-[data-theme="light"] {
-  --screens-background-color: #f6f6f7;
-  --sidebar-background-color: #ffffff;
-  --header-background-color: #fcfcfc;
-  --text-color: #161616;
-  --create-board-btn-color: #bedbb0;
-  --scroll-background-color: #e8e8e8;
-  --scroll-btn-color: #1616161a;
-  --need-help-background-color: #f6f6f7;
-}
-
-[data-theme="violet"] {
-  --screens-background-color: #d6d8ff;
-  --sidebar-background-color: #5255bc;
-  --header-background-color: #ffffff;
-  --text-color: #161616;
-  --create-board-btn-color: #b8bcfd;
-  --scroll-background-color: #ffffff;
-  --scroll-btn-color: #b8bcfd;
-  --need-help-background-color: #ffffff80;
-}
-
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-ul,
-ol,
-li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: inherit;
-  font-size: inherit;
-}
-
-html,
-body {
-  height: 100%;
-  line-height: 1;
-}
-
-textarea,
-button,
-input {
-  font-weight: inherit;
-  font-size: inherit;
-  color: inherit;
-  font-family: inherit;
-}
-
-button {
-  cursor: pointer;
-  background-color: inherit;
-}
+@import url("/src/styles/reset.css");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("/src/styles//theme.css");
