--- a/src/pages/WelcomePage/WelcomePage.module.css
+++ b/src/pages/WelcomePage/WelcomePage.module.css
@@ -1,4 +1,8 @@
-body {
+.page {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: rgb(246, 246, 247);
   background: linear-gradient(
     180deg,
@@ -6,13 +10,6 @@ body {
     rgba(163, 215, 151, 1) 92%
   );
   color: #161616;
-}
-
-.mainCont {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .cont {
@@ -28,11 +25,6 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 24px;
-}
-
-.imageCont {
-}
-.image {
 }
 .logoCont {
   display: flex;
