--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --screens-background-color: #ffffff1a;
+  --screens-background-color: #1f1f1f;
   --sidebar-background-color: #121212;
   --header-background-color: #161616;
   --text-color: #ffffff;
