add some styles to header and screens page

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,3 +3,8 @@
   background-color: var(--screens-background-color);
   display: flex;
 }
+.mainCont {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
