--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   display: flex;
   max-height: 68px;
   background-color: var(--header-background-color);
@@ -15,6 +16,7 @@
   display: flex;
   gap: 4px;
   align-items: center;
+  cursor: pointer;
 }
 .themeText {
   font-size: 14px;
@@ -41,4 +43,21 @@
 }
 .avatar {
   width: 100%;
+}
+.themeDropdown {
+  position: absolute;
+  right: 180px;
+  top: 50px;
+  max-width: 100px;
+  max-height: 107px;
+  padding: 18px 18px;
+  border-radius: 8px;
+  background-color: #151515;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: #ffffff80;
+  border: 1px solid #ffffff80;
 }
