--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -7,6 +7,7 @@
   --scroll-background-color: #1f1f1f;
   --scroll-btn-color: #121212;
   --need-help-background-color: #1f1f1f;
+  --modal-background-color: #151515;
 }
 
 [data-theme="light"] {
@@ -18,6 +19,7 @@
   --scroll-background-color: #e8e8e8;
   --scroll-btn-color: #1616161a;
   --need-help-background-color: #f6f6f7;
+  --modal-background-color: #fcfcfc;
 }
 
 [data-theme="violet"] {
@@ -29,4 +31,5 @@
   --scroll-background-color: #ffffff;
   --scroll-btn-color: #b8bcfd;
   --need-help-background-color: #ffffff80;
+  --modal-background-color: #fcfcfc;
 }
