add ability send reports about program

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -67,6 +67,8 @@
   color: var(--create-board-btn-color);
 }
 .needHelpIconCont {
+  max-width: 94px;
+  cursor: pointer;
   display: flex;
   align-items: center;
   gap: 8px;
