--- a/src/components/ModalWindow/ModalWindow.module.css
+++ b/src/components/ModalWindow/ModalWindow.module.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 24px;
 }
 
 .closeBtn {
@@ -26,7 +27,8 @@ body {
 
 .submitBtn {
   width: 100%;
-  height: 49px;
+  max-height: 49px;
+  height: 100%;
   border-radius: 8px;
   font-size: 14px;
   font-weight: 500;
