--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -34,6 +34,7 @@
   border-bottom: 1px solid #ffffff1a;
   padding-top: 14px;
   padding-bottom: 14px;
+  cursor: pointer;
 }
 .createBoardText {
   max-width: 76px;
@@ -102,4 +103,16 @@
   justify-content: space-between;
   max-height: 630px;
   height: 100%;
+}
+
+.modalBtn {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+}
+
+.addIcon {
+  fill: black;
+  stroke: black;
 }
