--- a/src/components/BoardsList/BoardsList.module.css
+++ b/src/components/BoardsList/BoardsList.module.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  max-height: 130px;
   overflow-y: auto;
   overflow-x: hidden;
   direction: rtl;
   padding: 0px 24px;
   margin-right: -24px;
   margin-left: -24px;
+  margin-bottom: 40px;
 }
 
 .list::-webkit-scrollbar {
