--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,10 +1,11 @@
 .page {
   height: 100vh;
+  width: 100vw;
   background-color: var(--screens-background-color);
   display: flex;
 }
 .mainCont {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  width: 100%;
 }
