add editing columns

--- a/src/components/ColumnItem/ColumnItem.module.css
+++ b/src/components/ColumnItem/ColumnItem.module.css
@@ -45,3 +45,10 @@
 .editColumn {
   cursor: pointer;
 }
+
+.modalBtn {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+}
