--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -15,16 +15,16 @@
 }
 
 .board::-webkit-scrollbar-thumb {
-  background: #888;
+  background: var(--scroll-btn-color);
   border-radius: 4px;
 }
 
 .board::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: var(--scroll-btn-color);
 }
 
 .board::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: var(--scroll-background-color);
 }
 
 .addBtn {
