--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -80,6 +80,7 @@
 .actions {
   display: flex;
   gap: 8px;
+  position: relative;
 }
 
 .actionCont {
@@ -91,4 +92,36 @@
   gap: 8px;
   align-items: center;
   justify-content: center;
+}
+
+.themeDropdown {
+  position: absolute;
+  bottom: 30px;
+  right: 60px;
+  max-height: 107px;
+  padding: 18px 18px;
+  border-radius: 8px;
+  background-color: #151515;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: #ffffff80;
+  border: 1px solid #ffffff80;
+  overflow-y: auto;
+}
+
+.themeDropdown::-webkit-scrollbar {
+  width: 8px;
+  background-color: var(--scroll-background-color);
+}
+
+.themeDropdown::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-btn-color);
+  border-radius: 4px;
+}
+
+.themeDropdown::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scroll-btn-color);
 }
