--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  cursor: pointer;
 }
 .boardName {
   font-size: 18px;
@@ -21,6 +22,78 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 21px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.modalHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  cursor: pointer;
+}
+
+.modalTitle {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.filterOptions {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.labelCont {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.labelText {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+.showAllBtn {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  color: #ffffff80;
+}
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.item {
+  display: flex;
+  gap: 8px;
+  cursor: pointer;
+  max-width: 120px;
+}
+.color {
+  height: 14px;
+  width: 14px;
+  border-radius: 50px;
+}
+.option {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
   letter-spacing: -0.02em;
   text-align: left;
 }
