--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -32,7 +32,7 @@
   font-weight: 400;
   line-height: 16px;
   letter-spacing: -0.02em;
-  color: #ffffff80;
+  color: grey;
   max-width: 290px;
   white-space: normal;
   word-wrap: break-word;
