--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -8,6 +8,7 @@
   max-width: 1232px;
   width: 100%;
   height: 100%;
+  color: var(--chevron-color);
 }
 
 .board::-webkit-scrollbar {
@@ -49,6 +50,7 @@
   line-height: 21px;
   letter-spacing: -0.02em;
   text-align: left;
+  color: var(--chevron-color);
 }
 
 .modalBtn {
