--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 18px 24px;
+  color: var(--header-text-color);
 }
 .headerCont {
   display: flex;
@@ -26,18 +27,18 @@
 }
 .themeDropdown {
   position: absolute;
-  right: 180px;
+  right: 120px;
   top: 50px;
   max-width: 100px;
   max-height: 107px;
   padding: 18px 18px;
   border-radius: 8px;
-  background-color: #151515;
+  background-color: var(--dropdown-background-color);
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
   letter-spacing: -0.02em;
   text-align: left;
-  color: #ffffff80;
-  border: 1px solid #ffffff80;
+  color: var(--dropdown-color);
+  border: 1px solid var(--dropdown-color);
 }
