--- a/src/components/ModalWindow/ModalWindow.module.css
+++ b/src/components/ModalWindow/ModalWindow.module.css
@@ -1,6 +1,5 @@
 body {
   font-family: Poppins;
-  color: #ffffff;
 }
 
 .modalHeader {
@@ -34,8 +33,8 @@ body {
   line-height: 21px;
   letter-spacing: -0.02em;
   text-align: center;
-  color: var(--modal-add-btn-color);
-  background-color: var(--modal-add-btn-background-color);
+  color: var(--modal-add-btn-color) !important;
+  background-color: var(--modal-add-btn-background-color) !important;
 }
 
 .loaderCont {
